--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      - run: |
+          cd ~/
+          ls -R
       - name: Azure DevOps Commit Validator and Pull Request Linker
         uses: joshjohanning/azdo_commit_message_validator@v1
         with:
