--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           azure-devops-organization: jjohanning0798 # The name of the Azure DevOps organization
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }} # "Azure DevOps Personal Access Token (needs to be a full PAT)
-          fail-if-missing-workitem-commit-link: true # Fail the action if a commit in the pull request is missing AB# in the commit message
+          fail-if-missing-workitem-commit-link: false # Fail the action if a commit in the pull request is missing AB# in the commit message
   
