--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   pr-commit-message-enforcer-and-linker:
     runs-on: ubuntu-latest
-
+    container: 
+      image: ubuntu:latest
+      
     steps:
       - uses: actions/checkout@v3
       - name: Azure DevOps Commit Validator and Pull Request Linker
