--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -17,6 +17,6 @@ jobs:
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }} # "Azure DevOps Personal Access Token (needs to be a full PAT)
           fail-if-missing-workitem-commit-link: true # Fail the action if a commit in the pull request is missing AB# in the commit message
           link-commits-to-pull-request: true # Link the work items found in commits to the pull request
-          check-commits: false
-          check-pull-request: true
+          check-commits: true
+          check-pull-request: false
   
