--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   pr-commit-message-enforcer-and-linker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v3
