--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Azure DevOps Commit Validator and Pull Request Linker
-        uses: joshjohanning/azdo_commit_message_validator@only-link-in-pr
+        uses: joshjohanning/azdo_commit_message_validator@test-v2.0.1
         with:
           azure-devops-organization: jjohanning0798 # The name of the Azure DevOps organization
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }} # "Azure DevOps Personal Access Token (needs to be a full PAT)
@@ -19,4 +19,3 @@ jobs:
           link-commits-to-pull-request: true # Link the work items found in commits to the pull request
           check-commits: false
           check-pull-request: true
-  
