Add support for edited pull request types

--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -3,6 +3,8 @@ name: pr-commit-message-enforcer-and-linker
 on:
   pull_request:
     branches: [ "main" ]
+    types:
+      - edited
 
 jobs:
   pr-commit-message-enforcer-and-linker:
