Enable commit message checking in workflow (#27)
* Enable commit message checking in workflow

ab#556

* Add new pull request event types to workflow

ab#555

* Update test line in README.md

--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [ "main" ]
     types:
+      - opened
+      - synchronize
+      - reopened
       - edited
 
 jobs:
@@ -22,5 +25,5 @@ jobs:
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }} # "Azure DevOps Personal Access Token (needs to be a full PAT)
           fail-if-missing-workitem-commit-link: true # Fail the action if a commit in the pull request is missing AB# in the commit message
           link-commits-to-pull-request: true # Link the work items found in commits to the pull request
-          check-commits: false
+          check-commits: true
           check-pull-request: true
