--- a/.github/workflows/pr-commit-message-enforcer-and-linker.yml
+++ b/.github/workflows/pr-commit-message-enforcer-and-linker.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Azure DevOps Commit Validator and Pull Request Linker
-        uses: joshjohanning/azdo_commit_message_validator@test-v2.0.1
+        uses: joshjohanning/azdo_commit_message_validator@copilot/convert-to-native-node-action
         with:
           azure-devops-organization: jjohanning0798 # The name of the Azure DevOps organization
           azure-devops-token: ${{ secrets.AZURE_DEVOPS_PAT }} # "Azure DevOps Personal Access Token (needs to be a full PAT)
